--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
+            android:name="AdaptyPublicSdkKey"
+            android:value="public_live_gXprPX4Q.SZNj6c4H5hw76xWUIHTs" />
+        <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
