--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   localization: ^2.1.1
+  adapty_flutter: ^2.10.1
   logging: ^1.2.0
   logger: ^2.2.0
   uuid: ^4.4.0
