--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,14 +41,13 @@ dependencies:
   google_sign_in: ^6.2.1
   supabase_flutter: ^2.5.2
   fluttertoast: ^8.2.4
-  image_picker: ^1.1.2
+  camera: ^0.11.0
   flutter_signin_button: ^2.0.0
   flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
   package_info_plus: ^8.0.0
   flutter_dotenv: ^5.1.0
   provider: ^6.1.2
-
   meta: ^1.11.0
   bloc: ^8.1.4
   fpdart: ^1.1.0
