--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   bloc: ^8.1.4
   fpdart: ^1.1.0
   get_it: ^7.7.0
+  image_picker: ^1.1.2
   connectivity_plus: ^6.0.2
   internet_connection_checker_plus: ^2.3.0
   equatable: ^2.0.5
@@ -96,6 +97,7 @@ flutter:
   assets:
     - config/
     - assets/images/SVG_CC_Logo.svg
+    - assets/icons/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
