Updated svg to work with asset paths. Need to migrate all svg into asset folders, better experience for users.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,7 +96,7 @@ flutter:
   assets:
     - config/
     - assets/images/SVG_CC_Logo.svg
-    - assets/icons/
+    - assets/icons/my_closet/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
