Input List File to review CI_Trunk.yml

--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -185,6 +185,9 @@ jobs:
       - name: Build AAB for production
         run: flutter build appbundle --release --flavor prod --target=lib/main_prod.dart --dart-define=ENV=$ENV
 
+      - name: List Files
+        run: ls -R build/app/outputs/bundle/release/
+
       - name: Upload production AAB
         uses: actions/upload-artifact@v4
         with:
