--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   fpdart: ^1.1.0
   get_it: ^7.7.0
   image_picker: ^1.1.2
+  url_launcher: ^6.3.0
   connectivity_plus: ^6.0.2
   internet_connection_checker_plus: ^2.3.0
   equatable: ^2.0.5
@@ -100,6 +101,8 @@ flutter:
     - assets/icons/my_closet/additional_features/
     - assets/icons/drawer/
     - assets/icons/my_closet/gamification/closet_completed/
+    - assets/icons/my_outfit/outfit_review/
+    - assets/icons/my_outfit/additional_features/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
