--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -169,3 +169,9 @@ s3_region = "env(S3_REGION)"
 s3_access_key = "env(S3_ACCESS_KEY)"
 # Configures AWS_SECRET_ACCESS_KEY for S3 bucket
 s3_secret_key = "env(S3_SECRET_KEY)"
+
+# Add the functions section
+[functions]
+name = "deleteUserFolderAndAccount"
+version = "1"
+import_map = "./import_map.json"
