--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -26,7 +26,7 @@ jobs:
       # Deploy Supabase Function
       - name: Deploy Supabase Function
         run:
-          supabase functions deploy deleteUserFolderAndAccount --project-ref $SUPABASE_PROJECT_ID --import-map ./supabase/functions/deleteUserFolderAndAccount/import_map.json
+          supabase functions deploy deleteUserFolderAndAccount --project-ref $SUPABASE_PROJECT_ID
 
   deploy_dev_ui:
     needs: deploy_dev_supabase
@@ -131,7 +131,7 @@ jobs:
       # Deploy Supabase Function
       - name: Deploy Supabase Function
         run:
-          supabase functions deploy deleteUserFolderAndAccount --project-ref $SUPABASE_PROJECT_ID --import-map ./supabase/functions/deleteUserFolderAndAccount/import_map.json
+          supabase functions deploy deleteUserFolderAndAccount --project-ref $SUPABASE_PROJECT_ID
 
 
   deploy_prod_ui:
