Testing to see what wrong with colour folder

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ flutter:
     - assets/icons/my_closet/upload/clothing_layer/
     - assets/icons/my_closet/upload/clothing_type/
     - assets/icons/my_closet/upload/colour/
+    - assets/icons/my_closet/upload/colouring/
     - assets/icons/my_closet/upload/colour_variation/
     - assets/icons/my_closet/upload/general_type/
     - assets/icons/my_closet/upload/occasion/
