--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uuid: ^4.4.0
   google_sign_in: ^6.2.1
   supabase_flutter: ^2.5.2
+  http: ^1.2.2
   fluttertoast: ^8.2.4
   camera: ^0.11.0
   flutter_signin_button: ^2.0.0
@@ -55,6 +56,8 @@ dependencies:
   fpdart: ^1.1.0
   get_it: ^7.7.0
   image_picker: ^1.1.2
+  image: ^4.2.0
+  path_provider: ^2.1.4
   url_launcher: ^6.3.0
   connectivity_plus: ^6.0.2
   internet_connection_checker_plus: ^2.3.0
