--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   connectivity_plus: ^6.0.2
   internet_connection_checker_plus: ^2.3.0
   equatable: ^2.0.5
+  nps_plugin: ^1.0.0
+  in_app_review: ^2.0.9
 flutter_intl:
   enable: true
   path: l10n # Your folder path containing .arb files
