--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dev_dependencies:
   intl_utils: ^2.8.7
   bloc_test: ^9.1.7
   mockito: ^5.4.4
+  mocktail: ^1.0.4
   build_runner: ^2.4.8
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
