--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.2
   fluttertoast: ^8.2.4
   camera: ^0.11.0
+  permission_handler: ^11.3.1
   flutter_signin_button: ^2.0.0
   flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
