Beautify the achievement_completed_screen.dart and also learnt about navigation issue, and needing to enqueue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   logging: ^1.2.0
   logger: ^2.2.0
   uuid: ^4.4.0
+  confetti: ^0.7.0
   google_sign_in: ^6.2.1
   supabase_flutter: ^2.5.2
   http: ^1.2.2
