--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -147,61 +147,38 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17.0.9'
-      - uses: dart-lang/setup-dart@v1
-        with:
-          sdk: 'stable'
-      - uses: subosito/flutter-action@v2
+          fetch-depth: 0  # Ensures we get the full Git history, including tags
+
+      # Fetch Git tags and determine versionCode and versionName
+      - name: Set Version Code and Version Name
+        id: versioning
+        run: |
+          # Fetch all tags from the remote
+          git fetch --tags
+  
+          # Extract the latest tag (e.g., v1.0.0)
+          versionName=$(git describe --tags --abbrev=0 || echo "1.0.0")
+  
+          # Use the total number of commits since the latest tag as the versionCode
+          versionCode=$(git rev-list --count HEAD)
+  
+          # Set these values as environment variables for later steps
+          echo "VERSION_CODE=$versionCode" >> $GITHUB_ENV
+          echo "VERSION_NAME=$versionName" >> $GITHUB_ENV
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.0'
 
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.pub-cache
-            .flutter-plugins
-            .flutter-plugins-dependencies
-            build/
-          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}-${{ github.run_number }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
-
-      - name: Setup key.properties for production
-        run: |
-          mkdir -p app
-          echo "prodStoreFile=android/app/prod_keystore.jks" > android/app/key.properties
-          echo "prodKeyAlias=${{ secrets.PROD_KEY_ALIAS }}" >> android/key.properties
-          echo "prodStorePassword=${{ secrets.PROD_STORE_PASSWORD }}" >> android/key.properties
-          echo "prodKeyPassword=${{ secrets.PROD_KEY_PASSWORD }}" >> android/key.properties
-          echo "${{ secrets.PROD_KEYSTORE_BASE64 }}" | base64 --decode > android/app/prod_keystore.jks
-
-      - name: Create app_config_prod.json
-        run: |
-          mkdir -p config
-          echo '{
-            "SUPABASE_URL": "${{ secrets.SUPABASE_URL }}",
-            "SUPABASE_ANON_KEY": "${{ secrets.SUPABASE_ANON_KEY }}",
-            "SUPABASE_SERVICE_ROLE_KEY": "${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}",
-            "webClientId": "${{ secrets.WEB_CLIENT_ID }}",
-            "iosClientId": "${{ secrets.IOS_CLIENT_ID }}"
-          }' > config/app_config_prod.json
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Run linting and static analysis
-        run: flutter analyze
-
-      - name: Run tests
-        run: flutter test
-
+      # Use the versionName and versionCode in the Flutter build command
       - name: Build AAB for production
-        run: flutter build appbundle --release --flavor prod --target=lib/main_prod.dart --dart-define=ENV=$ENV
+        run: |
+          flutter build appbundle --release --flavor prod --target=lib/main_prod.dart --dart-define=ENV=$ENV \
+          --build-name=$VERSION_NAME --build-number=$VERSION_CODE
 
+      # Upload the built AAB as an artifact
       - name: Upload production AAB
         uses: actions/upload-artifact@v4
         with:
