Modified to resolve the ws bug.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "supabase": "^1.163.6"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.43.4"
+    "@supabase/supabase-js": "^2.43.4",
+    "ws": ">=8.17.1"
   }
 }
