--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ def buildVersionName = "${majorVersion}.${minorVersion}.${buildNumber}"
 
 android {
 
-    namespace "com.example.closetconscious"
+    namespace "com.makinglifeeasie.closetconscious"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -48,7 +48,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.closetconscious"
+        applicationId "com.makinglifeeasie.closetconscious"
         minSdkVersion 27
         targetSdkVersion 34
         versionCode buildNumber.toInteger()  // Automatically use build number for versionCode
@@ -58,11 +58,11 @@ android {
 
     productFlavors {
         dev {
-            applicationId "com.example.closetconscious.dev"
+            applicationId "com.makinglifeeasie.closetconscious.dev"
             versionNameSuffix "-dev"
         }
         prod {
-            applicationId "com.example.closetconscious"
+            applicationId "com.makinglifeeasie.closetconscious"
         }
     }
 
