Remove Supabase Function, update info.plist and remove adapty. Let's see how it works.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,7 +54,7 @@
         <string>Editor</string>
         <key>CFBundleURLSchemes</key>
         <array>
-            <string>com.googleusercontent.apps.545049041946-1251261g1r124</string>
+            <string>com.googleusercontent.apps.545049041946-b0rt314v7cs7rhdung8aljnf8a9mmbbf</string>
         </array>
       </dict>
     </array>
