--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -214,6 +214,13 @@ jobs:
           flutter build appbundle --release --flavor prod --target=lib/main_prod.dart --dart-define=ENV=$ENV \
           --build-number=$BUILD_NUMBER
 
+      - name: Upload ProGuard Mapping File
+        if: success()
+        uses: actions/upload-artifact@v2
+        with:
+          name: mapping-file
+          path: app/build/outputs/mapping/release/mapping.txt
+
       - name: Upload production AAB
         uses: actions/upload-artifact@v4
         with:
