--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -215,11 +215,11 @@ jobs:
           --build-number=$BUILD_NUMBER
 
       - name: Upload ProGuard Mapping File
-        if: success()
+        if: success() && (test -f app/build/outputs/mapping/release/mapping.txt)
         uses: actions/upload-artifact@v4
         with:
           name: mapping-file
-          path: app/build/outputs/mapping/release/mapping.txt
+          path: build/app/outputs/mapping/prodRelease/mapping.txt
 
       - name: Upload production AAB
         uses: actions/upload-artifact@v4
