--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -215,7 +215,7 @@ jobs:
           --build-number=$BUILD_NUMBER
 
       - name: Upload ProGuard Mapping File
-        if: success() && (test -f app/build/outputs/mapping/release/mapping.txt)
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: mapping-file
