--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -97,6 +97,9 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            bundle {
+                enable true
+            }
         }
 
     }
