Got successful deployment of prod release abb locally. See if fastlane works or not

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,11 +58,11 @@ android {
 
     productFlavors {
         dev {
-            applicationId "com.makinglifeeasie.closetconscious.dev"
+            applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
         }
         prod {
-            applicationId "com.makinglifeeasie.closetconscious"
+            applicationIdSuffix ".prod"
         }
     }
 
